Fix distorted landing page

--- a/src/styles/scss/base/_settings.scss
+++ b/src/styles/scss/base/_settings.scss
@@ -1,1 +1,16 @@
 $color-gray: #aaa;
+$color-gray: #aaa;
+
+$secondary-color: rgb(219, 235, 235);
+
+$navbar-color: rgb(224, 223, 223);
+
+$button-color: teal;
+
+$black: #000000;
+
+$white: #ffffff;
+
+$error-red: #a94442;
+
+$alert-red: #ec2e2b;
